# ArtiApp-Template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: Main.hpp
src/: Main.cpp
